# BOTLLM

./: README.md  pyproject.toml
modelos/alexa/: app.py
modelos/nltk_sumarizacao/: app_nltk.py
modelos/regrecao_linear/: app.py  teste.ipynb
